<resources>
    <string name="app_name">InWords</string>
    <string name="title_home">Главная</string>
    <string name="title_dictionary">Словарь</string>
    <string name="title_game">Тренировка</string>
    <string name="title_profile">Профиль</string>

    <string name="sign_success">Успешно</string>

    <!-- sign in start -->
    <string name="sign_in">Вход</string>
    <string name="sign_in_email">E-mail</string>
    <string name="sign_in_password">Пароль</string>
    <string name="sign_in_enter">Войти</string>
    <string name="sign_in_no_account">Нет аккаунта?</string>
    <string name="sign_in_sign_up">Создать аккаунт</string>
    <string name="sign_in_restore_password">Забыли e-mail или пароль?</string>
    <string name="session_will_be_terminated">Ваша текущая сессия будет завершена</string>
    <string name="you_can_choose_the_account_to_login">Вы сможете заново использовать тот же аккаунт или выбрать другой</string>
    <!-- sign in end -->

    <!-- sign up start -->
    <string name="registration">Регистрация</string>
    <string name="sign_up_email">Введите e-mail</string>
    <string name="sign_up_password">Введите пароль</string>
    <string name="sign_up_confirm_password">Повторите пароль</string>
    <string name="sign_up_enter">Создать аккаунт</string>
    <string name="sign_up_have_account">Уже есть аккаунт?</string>
    <string name="sign_up_sign_in">Войти</string>
    <!-- sign up end -->

    <!-- password recovery part1 start -->
    <string name="password_recovery_part1_email">Введите e-mail</string>
    <string name="password_recovery_part1_enter">Восстановить пароль</string>
    <!-- password recovery part1 end -->

    <!-- password recovery part2 start -->
    <string name="password_recovery_part2_info">Код для восстановления пароля был отправлен на адрес электронной почты</string>
    <string name="password_recovery_part2_key">Введите полученный код</string>
    <string name="password_recovery_part2_enter">Отправить</string>
    <!-- password recovery part2 end -->

    <!-- password recovery part3 start -->
    <string name="password_recovery_part3_new_password">Введите новый пароль</string>
    <string name="password_recovery_part3_confirm_new_password">Повторите новый пароль</string>
    <string name="password_recovery_part3_enter">Поменять пароль</string>
    <!-- password recovery part3 end -->

    <!-- word addition start -->
    <string name="word_addition_word">Слово или фраза на английском языке</string>
    <string name="word_addition_translation">Перевод</string>
    <string name="button_add_text">Добавить</string>
    <string name="button_edit_text">Изменить</string>
    <string name="sign_in_in_process">Авторизация</string>
    <string name="sign_up_in_process">Создание аккаунта</string>
    <string name="inwords_logotype">InWords логотип</string>
    <string name="voice_translation">Озвучить перевод</string>
    <string name="yandex_dictionary">Реализовано с помощью сервиса «Яндекс.Словарь</string>
    <string name="yandex_dictionary_url">https://tech.yandex.ru/dictionary</string>

    <string name="undo_translation_deletion">ОТМЕНИТЬ</string>
    <string name="translation_deleted">Слово удалено</string>
    <string name="translation_multiple_deleted">Слов удалено: %d</string>
    <string name="dictionary_screen_title">Ваш словарь</string>
    <!-- word addition end -->

    <!-- gameResource start -->
    <string name="no_content">К сожалению, что-то пошло не так</string>
    <string name="no_content_solutions">Возможно, отсутствует интернет, а возможно, вы не вошли в аккаунт</string>
    <string name="choose_level">Выберите уровень</string>
    <string name="custom_game">Свои игры</string>
    <string name="card_game_name">Карточки</string>
    <string name="custom_game_card_game_subtext">Если вы выбрали более 6 пар слов для игры, то в игре будут отображаться случайные пары, как в контрольных уровнях</string>
    <string name="add_words_from_game_to_dictionary">Добавить слова из игры в словарь</string>
    <!-- gameResource end -->

    <!-- home start -->
    <string name="avatar">Аватар</string>
    <string name="dictionary_title">Ваш словарь</string>
    <string name="error_text_placeholder">Не удалось загрузить данные</string>
    <string name="loading_text_placeholder">Загрузка профиля</string>
    <string name="sign_up_proposal">Создайте аккаунт, чтобы использовать больше возможностей приложения</string>
    <string name="user_experience">Опыт на сегодня: %1$d</string>
    <string name="choose_game">Выберите тему</string>
    <string name="game_remove">Удалить</string>
    <string name="accessibility_navigate_home">Navigate home</string>
    <string name="accessibility_go_to_levels_list">Go to levels list</string>
    <string name="accessibility_go_to_next_level">Go to next level</string>
    <string name="rating_not_loaded">Ваш рейтинг будет обновлён позднее :)</string>
    <string name="start_game_button_text">Поплыли</string>
    <string name="unable_to_load_voice">Не удалось загрузить озвучку</string>
    <string name="unable_to_load_exercise">Не удалось загрузить упражнение</string>
    <string name="exercise_loading">Упражнение загружается</string>

    <plurals name="words_in_dictionary">
        <item quantity="zero">В словаре %1$d слов</item>
        <item quantity="one">В словаре %1$d слово</item>
        <item quantity="two">В словаре %1$d слова</item>
        <item quantity="few">В словаре %1$d слова</item>
        <item quantity="many">В словаре %1$d слов</item>
        <item quantity="other">В словаре %1$d слов</item>
    </plurals>
    <!-- home end -->

    <!-- profile start -->
    <string name="change_account">Сменить аккаунт</string>
    <string name="policy_privacy_agreement">Используя приложение, вы соглашаетесь с  \nполитикой конфиденциальности</string>
    <string name="button_apply_text">Подтвердить</string>
    <string name="nick_text">Псевдоним</string>
    <string name="unable_to_change_nickname">Не удалось изменить ник. Попробуйте ещё раз</string>
    <string name="unable_to_change_email">Не удалось изменить email. Попробуйте ещё раз</string>
    <string name="unable_to_logout">Не удалось выйти из аккаунта. Попробуйте ещё раз</string>
    <string name="logout_warning_message">Данные, сохранённые на устройстве, будут стёрты. Позже, вы сможете снова войти в аккаунт или зарегистрироваться</string>
    <!-- profile end -->

    <!-- policy start -->
    <string name="policy_header">Привет, друг!\n\nВам необходимо ознакомиться с информацией о том, какие данные собирает и использует приложение InWords, и зачем оно это делает</string>
    <string name="policy_explanation">Так как мы используем сервисы Google, мы должны уведомить Вас о том, что они собирают некоторую информацию о Вас (например, идентификатор для персонализированной рекламы)\n\n
        В свою очередь, команда InWords обрабатывает минимальное количество информации, а именно Ваши:\n\nEmail, ник, изображение профиля\n\n
        Спасибо, что доверяете InWords!</string>
    <string name="policy_agree_button">Перейти к приложению</string>
    <!-- policy end -->

    <!-- unsorted start -->
    <string name="settings">Настройки</string>
    <string name="incorrect_input_word">Вы ввели некорректное слово</string>
    <string name="incorrect_input_email">Вы ввели некорректный email</string>
    <string name="incorrect_input_password">Вы ввели некорректный пароль</string>
    <string name="incorrect_input_password_confirmation">Пароли не совпадают</string>

    <!-- unsorted end -->

</resources>
