<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp"
        android:paddingBottom="54dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:contentDescription="@string/inwords_logotype"
            android:src="@drawable/ic_new_word" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNativeWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/word_addition_word"
                android:inputType="textCapSentences"
                android:lines="1"
                android:maxLength="64" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextForeignWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/word_addition_translation"
                android:inputType="textCapSentences"
                android:lines="1"
                android:maxLength="64" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/button_add_text"
            android:textColor="@android:color/primary_text_dark" />

    </LinearLayout>

</ScrollView>