<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/space_xmedium_large"
        android:paddingTop="@dimen/space_xxxxgiant"
        android:paddingRight="@dimen/space_xmedium_large"
        android:paddingBottom="@dimen/space_xxxxgiant">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/password_recovery_part2_info"
            android:textAppearance="@style/TextAppearance.Inwords.Subtitle1.Default" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_large">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextKey"
                android:layout_width="match_parent"
                android:textAppearance="@style/TextAppearance.Inwords.Subtitle1.Default"
                android:layout_height="wrap_content"
                android:hint="@string/password_recovery_part2_key"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonEnterPasswordRecoveryPart2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_large"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/password_recovery_part2_enter"
            android:textAppearance="@style/TextAppearance.Inwords.Button.Default" />

    </LinearLayout>

</ScrollView>