<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/elevation_medium">

    <ImageView
        android:id="@+id/dict"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="@dimen/space_xsmall"
        android:layout_marginTop="@dimen/space_xsmall"
        android:layout_marginBottom="@dimen/space_xsmall"
        android:contentDescription="@string/avatar"
        android:elevation="@dimen/elevation_medium"
        android:src="@drawable/ic_dictionary" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_giant"
        android:layout_marginTop="@dimen/space_xsmall"
        android:elevation="@dimen/elevation_medium"
        android:ellipsize="end"
        android:lines="1"
        android:paddingStart="@dimen/space_xsmall"
        android:paddingEnd="@dimen/space_xsmall"
        android:text="@string/dictionary_title"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/dictSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/space_giant"
        android:layout_marginBottom="@dimen/space_xsmall"
        android:elevation="@dimen/elevation_medium"
        android:ellipsize="end"
        android:lines="1"
        android:paddingStart="@dimen/space_xsmall"
        android:paddingEnd="@dimen/space_xsmall"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        tools:text="@string/words_in_dictionary" />

</androidx.cardview.widget.CardView>