<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_margin"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/medium_card_elevation"
    tools:showIn="@layout/fragment_home">

    <TextView
        android:id="@+id/clickToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/half_margin"
        android:elevation="@dimen/medium_card_elevation"
        android:gravity="center"
        android:text="@string/sign_up_proposal"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/avatar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="@dimen/half_margin"
        android:layout_marginTop="@dimen/half_margin"
        android:layout_marginBottom="@dimen/half_margin"
        android:contentDescription="@string/avatar"
        android:elevation="@dimen/medium_card_elevation"
        app:failureImage="@drawable/ic_octopus1" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="@dimen/half_margin"
        android:elevation="@dimen/medium_card_elevation"
        android:ellipsize="end"
        android:lines="1"
        android:paddingStart="@dimen/half_margin"
        android:paddingEnd="@dimen/half_margin"
        android:textSize="24sp"
        tools:text="Любитель Языков" />

    <TextView
        android:id="@+id/experience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="@dimen/half_margin"
        android:elevation="@dimen/medium_card_elevation"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingStart="@dimen/half_margin"
        android:paddingEnd="@dimen/half_margin"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        tools:text="@string/user_experience" />
</androidx.cardview.widget.CardView>